Source presentation definition from SD-JWT authentication requirements
Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>